# MCPFLUIG

./: .gitignore  README.md
mcp-fluig-formularios/: README.md  pyproject.toml  requirements.txt  server.py
mcp-fluig-formularios/docs/: instrucoes-agente.md  manual-configuracao-mcp-equipe-dev.md  manual-desenvolvedor-formularios-fluig.md  prompt-criar-formulario.md  style-guide-Conecta.md
mcp-fluig-formularios/rules/: fluig-anexos.mdc  fluig-datasets.mdc  fluig-events.mdc  fluig-forms.mdc  fluig-javascript.mdc  fluig-pai-filho.mdc  fluig-voyager-2.0.mdc
